--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                     <div class="membership-card fade-in" style="transition-delay: 0.2s;">
                         <span class="tag tag-standard">Access</span>
                         <h3>Access Tier</h3>
-                        <div class="price">₹5,000<span> / month</span></div>
+                        <div class="price">₹*,***<span> / month</span></div>
                         <p>The essential key to unlocking our world-class network and services.</p>
                         <ul class="perks-list">
                             <li><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5" /></svg>Dedicated Concierge Team (24/7)</li>
